' Generated by UML Generator
' Encoded: nLXBRnit4BxxLooGoogsWfu5muYj9800jmPa0pqKHK7lqZ8RxgCarwaQfB-zVEuEXrn9BbBqOal3UNypmw7UIqM46Xf-9Z-pjYU2D4N5YPJNIWdsE2YwgRhsdlr5Yn_EdbbDYug9YjEpCyjLh0ScMKkBhsT5iMJrghZjsftvNBc3dqX3LyMzrkN8DPMLOBrYNGl9WkuiPMl_6yfI_pdtsii5_9BHV55az5uKiLQhP4VLfYuNev-6i9uKcfFHgtCPdsKCQ_QNZjLUqOV9YKGHFCiu6ojo3XiTOqAC3az6ONd9Rm4IHquHSM8OaAeRMYNs4Sd5ARKea-hIf-1gH2Lu1pwdkYyAf7as_TjHDaaQE4ejn2bREsifW9wElOc5VSJMCnGpg09PpgGcWy4Berzcks8L-iRYGfHsQ5LiMaLtL3XGceQsAW95KA9eVQsCiehm3_hR0sjeGEMDCnbGiP-nDTqHiIq3KcJ9IB_fshKrLiP9ckiRGvt2iOXQAuO-nUGmiiPYZ0mznEOCmEZ6Z5go3-YwxpchY0fbVlvLJp75gcz5GrXR4h6JmS8llyvWSq_52wlyu1AMjALz9vdgJ9Li4GM01zdMc6JvIFLClNxD0hw15W8-bCVDQw1ECAwvPatRkd15vAj3q3y6AZNqQq3TEk9YSa7sNIj7P2rHtkpHCDxu6W_z4mlRDgeffy2s-GUaSX05ySme-oujSnwRAOE5ussY2JEwvwVSVz0J6U1ShX0gfwTi6RTs78M4z1HuU7_bWfKZ7Vc21tac8NAYuucLhvrrfwTznpaLiCF7peZw3zN395eUalf_6qg7otJsn1FHCmnF2nlotq-ihKUzMSI0vgifWJ_JHvs29xPpivNKzReJyaVIzphTqbx4qjwaXhprtp8mr4n2FS8JMbgPmVs9LCPLj-FaJaQP1zhqt5n75MQP4mqwW-Ibxzgxnzyr7mZL9oUw2qwTyfrLPj92nQgu0zzEl0DYu-MynAd3VzwZ1TfpRlQpUrie2_VjAX6StwSoOfy6pbzX4svTaz6R_O7jUqo3xoeCxVmTycyUA2Sipn3QpCtosiVByPLwt7sUHDSaArycHQzz1Hrws1nOtxCxEOO7Z-agweaLQb2SNp2f3mk6-dzrtO_pyq09XiH-R1LJ-qkKRZIgaxQ5izevzzknLm_kbLZwI8EcSY32pQxj15qJEHVhdQq1mYSrqO9k3gDXoZqHJgxRX3RYYdIKfua7TAyvTpcOtd40JKc9g9u3msUw_zA9UWxz92fSg3psT8N3Jq82jNfCzhHuG3dRKWbQsmD57PLYciYq5ercuxb-Lca5e3noLfm8l5x19HRMC70jpzpIHRYcGmhxGHcyfZ7uGlX0mmrtKIYz57U3kgTwGQZrouyd-oWKNmH1SwPtdmgVndlCpBlpGUzqqkLBMrNqJtNRaLgMG3xyDFPskGm_u_YVPZfD2Izc_ql1suGKykR4qMiqPKbtb0mFN4FYutVlhd9hQuOBhR79kZtv6ri2B8UD8KPa3wri-T1pJ31sT6xzGRSatXy0pw4pB8yIW-upF3CDIsOyPeOGv0pQtjEs7Xh-3m
' URL: http://www.plantuml.com/plantuml/uml/nLXBRnit4BxxLooGoogsWfu5muYj9800jmPa0pqKHK7lqZ8RxgCarwaQfB-zVEuEXrn9BbBqOal3UNypmw7UIqM46Xf-9Z-pjYU2D4N5YPJNIWdsE2YwgRhsdlr5Yn_EdbbDYug9YjEpCyjLh0ScMKkBhsT5iMJrghZjsftvNBc3dqX3LyMzrkN8DPMLOBrYNGl9WkuiPMl_6yfI_pdtsii5_9BHV55az5uKiLQhP4VLfYuNev-6i9uKcfFHgtCPdsKCQ_QNZjLUqOV9YKGHFCiu6ojo3XiTOqAC3az6ONd9Rm4IHquHSM8OaAeRMYNs4Sd5ARKea-hIf-1gH2Lu1pwdkYyAf7as_TjHDaaQE4ejn2bREsifW9wElOc5VSJMCnGpg09PpgGcWy4Berzcks8L-iRYGfHsQ5LiMaLtL3XGceQsAW95KA9eVQsCiehm3_hR0sjeGEMDCnbGiP-nDTqHiIq3KcJ9IB_fshKrLiP9ckiRGvt2iOXQAuO-nUGmiiPYZ0mznEOCmEZ6Z5go3-YwxpchY0fbVlvLJp75gcz5GrXR4h6JmS8llyvWSq_52wlyu1AMjALz9vdgJ9Li4GM01zdMc6JvIFLClNxD0hw15W8-bCVDQw1ECAwvPatRkd15vAj3q3y6AZNqQq3TEk9YSa7sNIj7P2rHtkpHCDxu6W_z4mlRDgeffy2s-GUaSX05ySme-oujSnwRAOE5ussY2JEwvwVSVz0J6U1ShX0gfwTi6RTs78M4z1HuU7_bWfKZ7Vc21tac8NAYuucLhvrrfwTznpaLiCF7peZw3zN395eUalf_6qg7otJsn1FHCmnF2nlotq-ihKUzMSI0vgifWJ_JHvs29xPpivNKzReJyaVIzphTqbx4qjwaXhprtp8mr4n2FS8JMbgPmVs9LCPLj-FaJaQP1zhqt5n75MQP4mqwW-Ibxzgxnzyr7mZL9oUw2qwTyfrLPj92nQgu0zzEl0DYu-MynAd3VzwZ1TfpRlQpUrie2_VjAX6StwSoOfy6pbzX4svTaz6R_O7jUqo3xoeCxVmTycyUA2Sipn3QpCtosiVByPLwt7sUHDSaArycHQzz1Hrws1nOtxCxEOO7Z-agweaLQb2SNp2f3mk6-dzrtO_pyq09XiH-R1LJ-qkKRZIgaxQ5izevzzknLm_kbLZwI8EcSY32pQxj15qJEHVhdQq1mYSrqO9k3gDXoZqHJgxRX3RYYdIKfua7TAyvTpcOtd40JKc9g9u3msUw_zA9UWxz92fSg3psT8N3Jq82jNfCzhHuG3dRKWbQsmD57PLYciYq5ercuxb-Lca5e3noLfm8l5x19HRMC70jpzpIHRYcGmhxGHcyfZ7uGlX0mmrtKIYz57U3kgTwGQZrouyd-oWKNmH1SwPtdmgVndlCpBlpGUzqqkLBMrNqJtNRaLgMG3xyDFPskGm_u_YVPZfD2Izc_ql1suGKykR4qMiqPKbtb0mFN4FYutVlhd9hQuOBhR79kZtv6ri2B8UD8KPa3wri-T1pJ31sT6xzGRSatXy0pw4pB8yIW-upF3CDIsOyPeOGv0pQtjEs7Xh-3m
' Generated on: 2026-02-17T15:57:36.358651360

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cuisine {
  -id: Long
  -cuisineName: String
  -description: String
  -region: Region
  --
  +Cuisine()
  +Cuisine(cuisineName: String, description: String, region: Region)
  +getId(): Long
  +getCuisineName(): String
  +setCuisineName(cuisineName: String): void
  +getDescription(): String
  +setDescription(description: String): void
  +getRegion(): Region
  +setRegion(region: Region): void
}

class Region {
  -id: Long
  -regionName: String
  -country: String
  -cuisines: List<Cuisine>
  --
  +Region()
  +Region(regionName: String, country: String)
  +getId(): Long
  +getRegionName(): String
  +setRegionName(regionName: String): void
  +getCountry(): String
  +setCountry(country: String): void
  +getCuisines(): List<Cuisine>
  +setCuisines(cuisines: List<Cuisine>): void
}

class Review {
  -id: Long
  -cuisine: Cuisine
  -rating: Integer
  -comment: String
  -createdAt: LocalDateTime
  --
  #Review()
  +Review(cuisine: Cuisine, rating: Integer, comment: String)
  #onCreate(): void
  +getId(): Long
  +getCuisine(): Cuisine
  +getRating(): Integer
  +getComment(): String
  +getCreatedAt(): LocalDateTime
}

class LocalcuisineApplication {
  +{static} main(args: String[]): void
}

class ReviewService {
  -reviewRepository: ReviewRepository
  -cuisineRepository: CuisineRepository
  -cacheService: CacheService
  --
  +ReviewService(reviewRepository: ReviewRepository, cuisineRepository: CuisineRepository, cacheService: CacheService)
  +createReview(request: CreateReviewRequest): ReviewResponse
  +getReviewsByCuisine(cuisineId: Long): List<ReviewResponse>
  +deleteReview(reviewId: Long): void
}

class ReviewResponse {
  -id: Long
  -rating: Integer
  -comment: String
  -createdAt: LocalDateTime
  --
  +ReviewResponse(id: Long, rating: Integer, comment: String, createdAt: LocalDateTime)
  +getId(): Long
  +getRating(): Integer
  +getComment(): String
  +getCreatedAt(): LocalDateTime
}

class CreateReviewRequest {
  -cuisineId: Long
  -rating: Integer
  -comment: String
  --
  +getCuisineId(): Long
  +setCuisineId(cuisineId: Long): void
  +getRating(): Integer
  +setRating(rating: Integer): void
  +getComment(): String
  +setComment(comment: String): void
}

class ReviewController {
  -reviewService: ReviewService
  --
  +ReviewController(reviewService: ReviewService)
  +createReview(request: CreateReviewRequest): ReviewResponse
  +getReviewsByCuisine(cuisineId: Long): List<ReviewResponse>
}

interface ReviewRepository {
  ~findByCuisineId(cuisineId: Long): List<Review>
}

class WebConfig {
  +addCorsMappings(registry: CorsRegistry): void
}

class RedisConfig {
  +redisConnectionFactory(): RedisConnectionFactory
  +redisTemplate(connectionFactory: RedisConnectionFactory): RedisTemplate<String,Object>
}

class CuisineService {
  -cuisineRepository: CuisineRepository
  -objectMapper: ObjectMapper
  -cacheService: CacheService
  --
  +CuisineService(cacheService: CacheService, cuisineRepository: CuisineRepository, objectMapper: ObjectMapper)
  +getCuisinesByRegion(regionName: String): List<String>
  +getCuisinesByCountry(country: String): List<String>
  +getFullCuisinesByRegion(regionName: String): List<Cuisine>
  +getCuisineByName(cuisineName: String): CuisineResponse
}

class CuisineResponse {
  -id: Long
  -cuisineName: String
  -description: String
  -regionName: String
  -country: String
  --
  +CuisineResponse(id: Long, cuisineName: String, description: String, regionName: String, country: String)
  +{static} from(cuisine: Cuisine): CuisineResponse
  +getId(): Long
  +getCuisineName(): String
  +getDescription(): String
  +getRegionName(): String
  +getCountry(): String
}

class CuisineController {
  -cuisineService: CuisineService
  --
  +CuisineController(cuisineService: CuisineService)
  +getByRegion(regionName: String): List<String>
  +getByCuisineName(cuisineName: String): ResponseEntity<CuisineResponse>
}

interface CuisineRepository {
  ~findByRegion_RegionName(regionName: String): List<Cuisine>
  ~findByRegion_Country(country: String): List<Cuisine>
  ~findByCuisineNameIgnoreCase(cuisineName: String): Optional<Cuisine>
}

class LocationService {
  -locationRepository: LocationRepository
  --
  +LocationService(locationRepository: LocationRepository)
  +getAllRegions(): List<String>
  +searchRegions(keyword: String): List<String>
}

class LocationController {
  -locationService: LocationService
  --
  +LocationController(locationService: LocationService)
  +getAllRegions(): List<String>
  +getByRegionName(locationname: String): List<String>
}

interface LocationRepository {
  ~findByRegionNameContainingIgnoreCase(name: String): List<Region>
}

class CacheService {
  -redisTemplate: RedisTemplate<String, Object>
  --
  +put(key: String, value: Object, timeoutSeconds: long): void
  +get(key: String): Object
  +evict(key: String): void
}

class LocalcuisineApplicationTests {
  ~contextLoads(): void
}

Cuisine *-- Region
Region o-- Cuisine
Review *-- Cuisine
ReviewService *-- ReviewRepository
ReviewService *-- CuisineRepository
ReviewService *-- CacheService
ReviewService ..> CreateReviewRequest
ReviewService ..> ReviewResponse
ReviewController *-- ReviewService
ReviewController ..> CreateReviewRequest
ReviewController ..> ReviewResponse
CuisineService *-- CuisineRepository
CuisineService *-- CacheService
CuisineService ..> CuisineResponse
CuisineResponse ..> Cuisine
CuisineResponse ..> CuisineResponse
CuisineController *-- CuisineService
LocationService *-- LocationRepository
LocationController *-- LocationService
@enduml